# FireS3

./: LICENSE  README.md  pyproject.toml
fires3/: models.py
fires3/domain/: ports.py
fires3/infrastructure/: repositories.py
tests/: test_models.py  test_repositories.py
