[project]
name = "fires3"
version = "0.1.0"
description = ""
authors = [
    {name = "Dextreme",email = "dbakolbire@gmail.com"}
]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "boto3 (>=1.37.38,<2.0.0)",
    "firebase-admin (>=6.7.0,<7.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "google-cloud-storage (>=3.1.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "fires3", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
